--- a/content/post/env-agency-dbt.adoc
+++ b/content/post/env-agency-dbt.adoc
@@ -1,6 +1,6 @@
 ---
 draft: false
-title: 'Building a data pipeline with dbt and DuckDB'
+title: 'Ten years late to the dbt party (DuckDB edition)'
 date: "2026-02-19T12:28:13Z"
 image: "/images/2026/02/h_IMG_4249.webp"
 thumbnail: "/images/2026/02/t_IMG_4218.webp"
